# brave-ddexvalidator

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  pytest.ini
ddexvalidator/: asgi.py  settings.py  urls.py  wsgi.py
ddexvalidator/theme/: apps.py
ddexvalidator/validator/: apps.py  forms.py  tests.py  urls.py  utils.py  views.py
ddexvalidator/validator/templates/validator/: upload.html
static/css/: styles.css
static/samples/: ern382.xml
