[tool.poetry]
name = "brave-ddexvalidator"
version = "0.1.0"
description = "users can upload a DDEX XML file, and the application will validate it against a DDEX XSD (XML Schema Definition)"
authors = ["Mariusz Smenżyk <mariusz@bravelab.io>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
django = "^5.1.1"
requests = "^2.32.3"
django-tailwind = "^3.8.0"
django-crispy-forms = "^2.3"
crispy-tailwind = "^1.0.3"
bs4 = "^0.0.2"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
django-pytest = "^0.2.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
